2009-10-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding new NeutralFinalState projection. Note that this final
	state takes E_T instead of p_T as argument (makes more sense for
	neutral particles). The compare() method does not yet work as
	expected (E_T comparison still missing).

2009-10-17  Andy Buckley  <andy@insectnation.org>

	* Adding parsing of units in cross-sections passed to the "-x"
	flag, i.e. "-x 101 mb" is parsed internally into 1.01e11 pb.

2009-10-16  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Disabling DELPHI_2003_WUD_03_11 in the Makefiles, since I don't
	trust the data.

	* Getting STAR_2009_UE_HELEN to work.

2009-10-04  Andy Buckley  <andy@insectnation.org>

	* Adding triggers and other tidying to (still unvalidated)
	UA1_1990 analysis.

	* Fixing definition of UA5 trigger to not be intrinscally
	different for pp and ppbar: this is corrected for (although it
	takes some readng to work this out) in the 1982 paper, which I
	think is the only one to compare the two modes.

	* Moving projection setup and registration into init() method for
	remaining analyses.

	* Adding trigger implementations as projections for CDF Runs 0 &
	1, and for UA5.

2009-10-01  Andy Buckley  <andy.buckley@cern.ch>

	* Moving projection setup and registration into init() method for
	analyses from ALEPH, CDF and the MC_ group.

	* Adding generic SUSY validation analysis, based on plots used in
	ATLAS Herwig++ validation.

	* Adding sorted particle accessors to FinalState (cf. JetAlg).

2009-09-29  Andy Buckley  <andy@insectnation.org>

	* Adding optional use of args as regex match expressions with
	-l/--list-analyses.

2009-09-03  Andy Buckley  <andy.buckley@cern.ch>

	* Passing GSL include path to compiler, since its absence was
	breaking builds on systems with no GSL installation in a standard
	location (such as SLC5, for some mysterious reason!)

	* Removing lib extension passing to compiler from the configure