@@ -51,6 +51,8 @@ dist_pkgdata_DATA = \
   JADE_OPAL_2000_S4300807.info \
   MC_LHC_LEADINGJETS.info \
   MC_LHC_DIJET.info \
+  MC_LHC_PHOTONJETUE.info \
+  MC_LHC_SUSY.info \
   MC_LHC_WANALYSIS.info \
   MC_LHC_ZANALYSIS.info \
   MC_TVT1960_PHOTONJETS.info \
